Fix overflow scrolling

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -7,6 +7,7 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-color: rgba(211, 211, 211);
+    overflow-x: hidden;
 }
 
 main {
